# sparse-wiki-grounding

./: .gitignore  LICENSE  MIGRATION_PLAN.md  README.md  pyproject.toml
data/: schema.sql
examples/: explore_entity.py  hallucination_detection.py  quickstart.py  spreading_demo.py
experiments/: hallucination_benchmark.py
reports/: verification_baseline.json
scripts/: build_demo_db.py  enhance_demo_db.py
src/wiki_grounding/: __init__.py  context_grounder.py  entity.py  epa.py  spreading.py  store.py  verifier.py
tests/: __init__.py  test_store.py  test_verifier.py
